--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,80 @@
-ul {
-  display: flex;
-  flex-wrap: wrap;
+
+.App {
+  font-family: Arial, sans-serif;
+  text-align: center;
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 20px;
 }
 
-li {
-  list-style: none;
+h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+}
+
+h2 {
+  font-size: 2em;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+h3 {
+  font-size: 1.5em;
+  margin: 10px 0;
+}
+
+p {
+  font-size: 1em;
+  margin: 5px 0;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+li.fighter {
+  border: 1px solid #ddd;
+  border-radius: 8px;
   margin: 10px;
+  padding: 10px;
+  display: inline-block;
+  width: 250px;
+  text-align: left;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+li.fighter img {
+  max-width: 100%;
+  border-radius: 8px;
+}
+
+button {
+  background-color: #000000;
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1em;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+
+div > .stats {
+  margin-top: 20px;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.stats p {
+  margin: 5px 0;
 }
